@@ -9,7 +9,7 @@ Authors@R: c(person(given = "Jakob", family = "Messner", role = c("aut", "cre"),
              person(given = "Reto", family = "Stauffer", role = "aut", email = "reto.stauffer@uibk.ac.at",
                     comment = c(ORCID = "0000-0002-3798-5507")))
 Depends: R (>= 2.10.0)
-Imports: stats, Formula, ordinal, sandwich, scoringRules
+Imports: stats, Formula, ordinal, sandwich, scoringRules, countreg
 Suggests: glmx, lmtest, memisc
 Description: Different approaches to censored or truncated regression with 
   conditional heteroscedasticity are provided. First, continuous 
