@@ -1,5 +1,5 @@
 useDynLib(crch, .registration = TRUE)
-import("stats", "Formula", "scoringRules")
+import("stats", "Formula", "countreg", "scoringRules")
 importFrom("utils", "tail")
 importFrom("graphics", "abline", "axis", "par", "plot", "strwidth", "barplot", 
   "hist", "legend", "title")
@@ -58,6 +58,9 @@ S3method("update", "crch")
 S3method("model.frame", "crch")
 S3method("model.matrix", "crch")
 S3method("estfun", "crch")
+S3method("pit", "crch")
+S3method("rootogram", "crch")
+S3method("simulate", "crch")
 S3method("crps", "crch")
 S3method("plot", "crch.boost")
 S3method("coef", "crch.boost")
