@@ -12,6 +12,8 @@ Changes in Version 1.0-1
       distributions). For better backward compatibility, the default type is
       set to "location".
 
+  o Added pit(), rootogram(), and simulate() methods for crch objects.
+
   o Changed argument names mean and sd to location and scale in logistic and
     student-t distribution functions 
 
